RESOLVED FIXED 107593
Fix ASSERT(!hasInsertionPoint()) in threaded HTML parser
https://bugs.webkit.org/show_bug.cgi?id=107593
Summary Fix ASSERT(!hasInsertionPoint()) in threaded HTML parser
Tony Gentilcore
Reported 2013-01-22 15:06:46 PST
Fix ASSERT(!hasInsertionPoint()) in threaded HTML parser
Attachments
Patch (3.46 KB, patch)
2013-01-22 15:09 PST, Tony Gentilcore
no flags
Tony Gentilcore
Comment 1 2013-01-22 15:09:32 PST
Adam Barth
Comment 2 2013-01-22 15:59:43 PST
Comment on attachment 184057 [details] Patch OK.
WebKit Review Bot
Comment 3 2013-01-22 16:04:29 PST
Comment on attachment 184057 [details] Patch Clearing flags on attachment: 184057 Committed r140484: <http://trac.webkit.org/changeset/140484>
WebKit Review Bot
Comment 4 2013-01-22 16:04:32 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 5 2013-01-22 16:28:04 PST
Comment on attachment 184057 [details] Patch LGTM.
Note You need to log in before you can comment on or make changes to this bug.