Fix ASSERT(!hasInsertionPoint()) in threaded HTML parser https://bugs.webkit.org/show_bug.cgi?id=107593

Reviewed by Adam Barth.

Prior to this patch, several fast/parser tests hit ASSERT(!hasInsertionPoint()) in prepareToStopParsing().
That was because hasInsertionPoint() checks m_input.haveSeenEndOfFile() which was skipped for the threaded
parser case. This patch causes us to call markEndOfFile().

No new tests because covered by existing fast/parser tests.

* html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::didReceiveTokensFromBackgroundParser): This FIXME was done in a previous patch.
(WebCore::HTMLDocumentParser::finish):


Canonical link: https://commits.webkit.org/125829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140484 268f45cc-cd09-0410-ab3c-d52691b4dbfc